# pg-ai

./: .gitignore  README.md  asset-manifest.json  index.html
DS-1/: test.ipynb
robotics/: README.md  RobotArmController.py  RobotArmDetector.py  RobotArmDiscreteEnv.py  RobotArmEnv.py  TryRobotArmDetector.py  example_client.py  pyproject.toml  thresholdtool.py
robotics/logs/SAC_1/: events.out.tfevents.1655505627.HANK.27500.0
robotics/logs/SAC_10/: events.out.tfevents.1655509832.HANK.12944.0
robotics/logs/SAC_11/: events.out.tfevents.1655509879.HANK.25564.0
robotics/logs/SAC_12/: events.out.tfevents.1655509940.HANK.19516.0
robotics/logs/SAC_13/: events.out.tfevents.1655510068.HANK.23728.0
robotics/logs/SAC_14/: events.out.tfevents.1655510629.HANK.33504.0
robotics/logs/SAC_15/: events.out.tfevents.1655510727.HANK.7272.0
robotics/logs/SAC_16/: events.out.tfevents.1655510899.HANK.36640.0
robotics/logs/SAC_17/: events.out.tfevents.1655510990.HANK.30860.0
robotics/logs/SAC_18/: events.out.tfevents.1655511867.HANK.30432.0
robotics/logs/SAC_19/: events.out.tfevents.1655512214.HANK.31920.0
robotics/logs/SAC_2/: events.out.tfevents.1655506635.HANK.30520.0
robotics/logs/SAC_20/: events.out.tfevents.1655512444.HANK.18704.0
robotics/logs/SAC_3/: events.out.tfevents.1655507589.HANK.2496.0
robotics/logs/SAC_4/: events.out.tfevents.1655507886.HANK.35524.0
robotics/logs/SAC_5/: events.out.tfevents.1655508275.HANK.11816.0
robotics/logs/SAC_6/: events.out.tfevents.1655509061.HANK.28428.0
robotics/tools/: client.py  test.py  thresholdtool.py
(+66 files in other folders)
